--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "packages.json": "^0.0.1-security",
     "react": "^18.3.1",
